changes in footer menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 html{
 	scroll-behavior: smooth;
 	overflow-x: hidden;
+	/* scroll-behavior: inherit; */
+	
 }
 
 body {
@@ -8,8 +10,10 @@ body {
 	font:normal 16px "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight:300;
 	background-color:#fff;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 	line-height:1.5;
+	
+	
 }
 a {
 	color:#3498db;
@@ -1229,7 +1233,8 @@ img.mfp-img {
 .wrapsection {  
     padding-top:140px;
 	padding-bottom:140px;
-    position: relative;
+	position: relative;
+	
   }
 
 .parallax.section .container{
@@ -1548,6 +1553,10 @@ img.mfp-img {
 				body{
 					overflow-x: hidden;
 				}
+
+				.footer-contacts{
+					text-align: center;
+				}
 			}
 
 			#overlayer {
@@ -1609,7 +1618,9 @@ img.mfp-img {
 	}
 	.img-button:hover{
 		background-color: transparent; 	}
+
 	
+
 	
 
 	
